feat: :fire: version of the api and refactor of the code
